--- a/resources/chromeos/login/screen_gaia_signin.html
+++ b/resources/chromeos/login/screen_gaia_signin.html
@@ -1,15 +1,16 @@
 <div class="step right hidden" id="gaia-signin">
   <div class="step-contents">
     <div id="gaia-signin-aria-label" aria-live="polite"></div>
-    <div>
-      <div id="login-box"><!-- Aligned with the login box in iframe --></div>
-      <iframe id="signin-frame" hidden
-        src="about:blank"
-        marginwidth="0"
-        marginheight="0"
-        frameborder="0"
-        scrolling="no"></iframe>
+    <div id="gaia-signin-form-container">
+        <div id="login-box"><!-- Aligned with the login box in iframe --></div>
+        <iframe id="signin-frame" hidden
+          src="about:blank"
+          marginwidth="0"
+          marginheight="0"
+          frameborder="0"
+          scrolling="no"></iframe>
     </div>
+    <div id="gaia-signin-divider"></div>
     <div id="signin-right" hidden>
       <div id="gaia-signin-reason" class="signin-text"></div>
       <div id="createAccount" class="signin-text"></div>
