Add a button in the Gear menu to open more Files.app's windows.
Before, it was not obvious how to open more windows. Now it can be done by using the Gear menu. The new window will be open on the same location as the current one.

NOTRY=True
TEST=Click on the Gear menu, click on New window.
BUG=177575


Review URL: https://chromiumcodereview.appspot.com/12328081

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186385 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/file_manager/main.html
+++ b/resources/file_manager/main.html
@@ -119,6 +119,8 @@
                shortcut="U+007F"></command>
       <command id="newfolder" i18n-values="label:NEW_FOLDER_BUTTON_LABEL"
                shortcut="U+0045-Ctrl"></command>
+      <command id="newwindow" i18n-values="label:NEW_WINDOW_BUTTON_LABEL"
+          ></command>
 
       <command id="search" shortcut="U+0046-Ctrl"></command>
 
@@ -176,6 +178,7 @@
     </menu>
 
     <menu id="gear-menu" class="chrome-menu" showShortcuts>
+      <menuitem command="#newwindow"></menuitem>
       <menuitem command="#newfolder"></menuitem>
       <hr>
       <menuitem id="drive-sync-settings"
