Allow normal users to change per session flags.
This is the first step towards better support for about:flags on ChromeOS.

It allows users to specify flags that will be applied only after they log in thus they will not influence the login profile.

No non-owner  flags will be applied until chromium-os:39249 is implemented. 

BUG=39248
TEST=Open about flags as a non-owner and the flags should be editable but will not have any effect yet.


Review URL: https://chromiumcodereview.appspot.com/12330137

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186447 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/flags.html
+++ b/resources/flags.html
@@ -18,9 +18,13 @@
     <div id="title-spacer"><h1 i18n-content="flagsLongTitle"></h1></div>
   </div>
 
-  <div id="blurb-container">
+  <div class="blurb-container">
     <span id="blurb-warning" i18n-content="flagsWarningHeader">WARNING</span>
     <span i18n-content="flagsBlurb">WARNING TEXT</span>
+  </div>
+
+  <div class="blurb-container">
+    <span i18n-content="ownerWarning"></span>
   </div>
 
   <div id="flagsExperimentTemplate">
