Several UI tweaks BUG=176277 NOTRY=TRUE
Review URL: https://chromiumcodereview.appspot.com/12537005

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186448 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/login/screen_locally_managed_user_creation.html
+++ b/resources/chromeos/login/screen_locally_managed_user_creation.html
@@ -1,4 +1,4 @@
-<div class="step hidden no-logo" id="managed-user-creation-flow">
+<div class="step hidden" id="managed-user-creation-flow">
   <div class="step-contents">
     <div id="managed-user-creation-flow-progress" class="step-loading">
       <div class="spinner"></div>
