Basic cryptohome/cloud interaction, stubs for error messages in UI.
BUG=176277
TBR=brettw@chromium.org


Review URL: https://chromiumcodereview.appspot.com/12379048

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186478 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/login/screen_locally_managed_user_creation.html
+++ b/resources/chromeos/login/screen_locally_managed_user_creation.html
@@ -10,8 +10,16 @@
       <div id="managed-user-creation-flow-error-value">
       </div>
     </div>
-    <div id="managed-user-creation-flow-success"
-        i18n-content="managedUserCreationSuccessMessage" hidden>
+    <div id="managed-user-creation-flow-success" hidden>
+      <div id="managed-user-creation-flow-success-title"
+          i18n-content="managedUserCreationSuccessTitle"></div>
+      <div id="managed-user-creation-flow-success-image">
+        <!-- TODO(antrim) -->Iconografic or screenshot or video!</div>
+      <div id="managed-user-creation-flow-success-image-text"
+           i18n-content="managedUserCreationSuccessImageText"></div>
+      <div id="managed-user-creation-flow-success-email-instructions"
+           i18n-content="managedUserCreationSuccessSendEmailInstructionsText">
+       </div>
     </div>
   </div>
   <div id="managed-user-creation-flow-controls" class="step-controls">
