--- a/resources/about_welcome_android/about_welcome_android.html
+++ b/resources/about_welcome_android/about_welcome_android.html
@@ -16,8 +16,9 @@
         <td>
           <div class="center">
             <div id="logo"></div>
-             <a href="http://www.google.com/chrome/android/tour"
-                id="take-a-tour" i18n-content="takeATour"></a>
+              <a id="take-a-tour" i18n-values="href:productTourUrl"
+                  i18n-content="takeATour">
+              </a>
           </div>
         </td>
       </tr>
