--- a/resources/about_welcome_android/about_welcome_android.html
+++ b/resources/about_welcome_android/about_welcome_android.html
@@ -11,23 +11,15 @@
     <script src="chrome://welcome/about_welcome_android.js"></script>
   </head>
   <body i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize">
-    <table id="center-wrapper">
-      <tr>
-        <td>
-          <div class="center">
-            <div id="logo"></div>
-              <a id="take-a-tour" i18n-values="href:productTourUrl"
-                  i18n-content="takeATour">
-              </a>
-          </div>
-        </td>
-      </tr>
-    </table>
-    <div id="footer-container">
-      <div id="footer">
-        <span i18n-content="firstRunSignedIn"></span>
-        <a id="settings" href="#settings" i18n-content="settings"></a>
-      </div>
+    <div class="spacing"></div>
+    <div id="logo"></div>
+    <a id="take-a-tour" i18n-values="href:productTourUrl"
+        i18n-content="takeATour">
+    </a>
+    <div class="spacing"></div>
+    <div id="footer">
+      <span i18n-content="firstRunSignedIn"></span>
+      <a id="settings" href="#settings" i18n-content="settings"></a>
     </div>
     <script src="chrome://welcome/strings.js"></script>
     <script src="chrome://resources/js/i18n_template2.js"></script>
