Enable signin allowed preference for managed users.
Allow to set the signin.allowed preference in the managed user settings page.

BUG=171370
TEST=Manual


Review URL: https://chromiumcodereview.appspot.com/12537004

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186694 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/options/managed_user_settings.html
+++ b/resources/options/managed_user_settings.html
@@ -56,9 +56,10 @@
       </div>
       <div class="checkbox">
         <label>
-          <input id="disable-signin-checkbox" type="checkbox" disabled>
-          <span for="disable-signin-checkbox"
-              i18n-content="disableProfileSignIn"></span>
+          <input id="allow-signin-checkbox" type="checkbox"
+              pref="signin.allowed" dialog-pref>
+          <span for="allow-signin-checkbox"
+              i18n-content="allowSignIn"></span>
         </label>
       </div>
       <div class="checkbox">
