History: Add notification at the top when full history sync is enabled.
When full history sync is enabled, show a notification at the top of
the screen, with a link to learn more. When we are unable to fetch
results from the server, use the same style of notification.

BUG=180277

Review URL: https://codereview.chromium.org/12462005

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186702 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/history/history.html
+++ b/resources/history/history.html
@@ -7,6 +7,7 @@
                                maximum-scale=1.0, user-scalable=no">
 </if>
 <title i18n-content="title"></title>
+<link rel="stylesheet" href="chrome://resources/css/butter_bar.css">
 <link rel="stylesheet" href="chrome://resources/css/chrome_shared.css">
 <link rel="stylesheet" href="chrome://resources/css/menu.css">
 <link rel="stylesheet" href="chrome://resources/css/menu_button.css">
@@ -85,6 +86,7 @@
         hidden>
     </button>
     <button id="lock-unlock-button" i18n-content="unlockButton"></button>
+    <div id="notification-bar" class="butter-bar" hidden></div>
   </div>
 
   <div id="results-display"></div>
