--- a/resources/history/history.html
+++ b/resources/history/history.html
@@ -43,11 +43,10 @@
 <div class="page">
   <header>
     <h1 i18n-content="history"></h1>
-    <form id="search-form" method="post" action=""
-        class="search-field-container">
+    <div id="search-form" class="search-field-container">
       <input type="search" id="search-field">
       <input type="submit" id="search-button" i18n-values="value:searchbutton">
-    </form>
+    </div>
   </header>
 
   <div id="filter-controls" hidden>
