Don't set lte portal frame until it is certain there is a network connection.
Otherwise, if we go to the network portal when it's not reachable, offline pagewill be shown in the iframe when the portal eventually becomes reachable.

BUG=178272

TEST=go to network settings for a lte network (the CrOS device should not be offline)
when the settings for the network are shown (there should be 'view account button'), disconnect all network connections
click 'view account' button, 'Connect to Wi-Fi to begin' page should be shown
Connect to a Wi-Fi or ethernet -> portal should appear


Review URL: https://chromiumcodereview.appspot.com/12755012

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@187449 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/mobile_setup.html
+++ b/resources/chromeos/mobile_setup.html
@@ -22,7 +22,7 @@
           <tbody><tr>
             <td class="canvas-cell"><canvas id="canvas" width="56"
                 height="56"></canvas></td>
-            <td class="header-ccell">
+            <td class="header-cell">
               <div id="statusHeader"></div>
               <div id="auxHeader"></div>
             </td>
