Modify enterprise sign-in confirmation dialog when profile is empty.
If the profile is sufficiently "empty", meaning that it has

- no bookmarks,
- no typed URLs,
- fewer than 10 history items,
- no synced extensions, and
- the browser hasn't been shut down since it was created

then the dialog is modified to not show the option to create a new
profile.

BUG=178771
TBR=jhawkins


Review URL: https://chromiumcodereview.appspot.com/12457018

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@187662 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/profile_signin_confirmation.html
+++ b/resources/profile_signin_confirmation.html
@@ -17,9 +17,11 @@
       target="_blank">
   </a>
   <p id="dialog-prompt"></p>
-  <button id="create-button" i18n-content="createProfileButtonText"></button>
-  <button id="continue-button" i18n-content="continueButtonText"></button>
-  <button id="cancel-button" i18n-content="cancelButtonText"></button>
+  <div id="button-row">
+    <button id="create-button" i18n-content="createProfileButtonText"></button>
+    <button id="continue-button"></button>
+    <button id="cancel-button" i18n-content="cancelButtonText"></button>
+  </div>
 
   <!-- Must be last in the DOM: processes elements and inserts i18n strings -->
   <script src="chrome://resources/js/i18n_template2.js"></script>
