--- a/resources/profile_signin_confirmation.html
+++ b/resources/profile_signin_confirmation.html
@@ -8,9 +8,10 @@
   <script src="chrome://resources/js/util.js"></script>
   <script src="strings.js"></script>
   <script src="profile_signin_confirmation.js"></script>
+  <link rel="stylesheet" href="profile_signin_confirmation.css">
 </head>
 <body i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize">
-  <h1 i18n-content="dialogTitle"></h1>
+  <h1 id="dialog-title" i18n-content="dialogTitle"></h1>
   <p id="dialog-message"></p>
   <a i18n-content="learnMoreText"
       href="http://support.google.com/chromeos/bin/answer.py?hl=en&answer=1331549"
