--- a/resources/chromeos/mobile_setup.html
+++ b/resources/chromeos/mobile_setup.html
@@ -11,8 +11,7 @@
 <script src="chrome://resources/js/cr/ui/dialogs.js"></script>
 <script src="mobile_setup.js"></script>
 </head>
-<body onload="mobile.MobileSetup.loadPage();"
-  i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize">
+<body i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize">
  <div id="mainDiv" class="dialog-body">
   <iframe class="hidden" id="paymentForm" frameborder="0"></iframe>
   <div id="systemStatus" class="overlay opaque-overlay hidden">
@@ -29,8 +28,7 @@
           </tr>
         </tbody></table>
       </div>
-      <iframe src="chrome-extension://iadeocfgjdjdmpenejdbfeaocpbikmab/activation.html"
-          id="carrierPage" frameborder="0"></iframe>
+      <iframe id="carrierPage" frameborder="0"></iframe>
     </div>
   </div>
   <div id="finalStatus" class="overlay translucent-black-overlay hidden">
