Fix about:flags to not show "undefined" for all platforms that are not ChromeOS.
BUG=chromium:189212
TEST=No undefined text in the about:flags page on platforms other than CrOS.


Review URL: https://chromiumcodereview.appspot.com/12842009

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@188407 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/flags.html
+++ b/resources/flags.html
@@ -23,9 +23,11 @@
     <span i18n-content="flagsBlurb">WARNING TEXT</span>
   </div>
 
+<if expr="pp_ifdef('chromeos')">
   <div class="blurb-container">
     <span i18n-content="ownerWarning"></span>
   </div>
+</if>
 
   <div id="flagsExperimentTemplate">
 
