Add quicklinks to top-bar-view of about:net-internals
BUG=235881

Review URL: https://codereview.chromium.org/14503012

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@196776 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/net_internals/status_view.html
+++ b/resources/net_internals/status_view.html
@@ -7,9 +7,10 @@ found in the LICENSE file.
 <!-- Status bar at top of screen when in capture mode. -->
 <div id=capture-status-view style="display:none">
   <span style='-webkit-flex-grow: 1'>
-    Capturing network events
+    <a href='#capture' class=capture-status-view-link>capturing</a>
+    <a href='#events' class=capture-status-view-link>events
     (<span id=capture-status-view-captured-events-count
-           title='Number of events captured to this window'></span>)
+           title='Number of events captured to this window'></span>)</a>
   </span>
   <span class=capture-status-view-arrow>
     <select id=capture-status-view-actions>
