--- a/resources/net_internals/prerender_view.html
+++ b/resources/net_internals/prerender_view.html
@@ -1,13 +1,55 @@
+<style>
+
+#prerender-view-history-table tr.used {
+  background-color: #F0FFF0;
+}
+
+#prerender-view-history-table tr:not(.used) {
+  background-color: #FFF0F0;
+}
+
+</style>
+
 <div id=prerender-view-tab-content class=content-box>
   <ul style='margin-top:0'>
-    <li>Prerender Enabled: <span id=prerender-view-enabled-span></span></li>
-    <li>Prerender Omnibox Enabled: 
-        <span id=prerender-view-omnibox-enabled-span></span></li>
+    <li>Prerender Enabled:
+      <span jscontent="enabled"></span>
+      <span jscontent="enabled_note"></span></li>
+    <li>Prerender Omnibox Enabled:
+      <span jscontent="omnibox_enabled"></span></li>
   </ul>
   <h4>Active Prerender Pages</h4>
-  <div id=prerender-view-active-div>
-  </div>
+  <table class="styled-table">
+    <thead>
+      <tr>
+        <th>URL</th>
+        <th>Duration</th>
+      </tr>
+    </thead>
+    <tbody id=prerender-view-active-table>
+      <tr jsselect="active">
+        <td><a jsvalues=".href:url" jscontent="url" target="_blank"></a></td>
+        <td jscontent="duration"></td>
+      </tr>
+    </tbody>
+  </table>
   <h4>Prerender History</h4>
-  <div id=prerender-view-history-div>
-  </div>
+  <table class="styled-table">
+    <thead>
+      <tr>
+        <th>Origin</th>
+        <th>URL</th>
+        <th>Final Status</th>
+        <th>Time</th>
+      </tr>
+    </thead>
+    <tbody id=prerender-view-history-table>
+      <tr jsselect="$this.history" jsvalues=".className: final_status.toLowerCase()">
+        <td jscontent="origin"></td>
+        <td><a jsvalues=".href:url" jscontent="url" target="_blank"></a></td>
+        <td jscontent="final_status"></td>
+        <td jscontent="timeutil.dateToString(new Date(parseInt(end_time)))"></td>
+      </tr>
+    </tbody>
+  </table>
 </div>
