More about:net-internals polish.
 - Don't autofocus the export or events fields (turned out to be annoying)
 - Add buttons to #capture for Stop/Reset (the actions menu should just alias other functionality)

BUG=23881

Review URL: https://codereview.chromium.org/14520004

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@196819 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/net_internals/capture_view.html
+++ b/resources/net_internals/capture_view.html
@@ -23,4 +23,9 @@
     </div>
   </div>
 
+  <div style='margin-top: 20px'>
+    <button id=capture-view-stop-button>Stop</button>
+    <button id=capture-view-reset-button>Reset</button>
+  </div>
+
 </div>
