--- a/resources/net_internals/quic_view.html
+++ b/resources/net_internals/quic_view.html
@@ -24,7 +24,7 @@
           <tbody>
             <tr jsselect="sessions">
               <td><span jscontent="host_port_pair"></span>
-                  <span jscontent="$this.aliases ? $this.aliases.join(' ') : ''">
+                <span jscontent="$this.aliases ? $this.aliases.join(' ') : ''"></span>
               </td>
               <td jscontent="peer_address"></td>
               <td jscontent="guid"></td>
