--- a/resources/net_internals/bandwidth_view.html
+++ b/resources/net_internals/bandwidth_view.html
@@ -1,4 +1,19 @@
 <!-- Bandwidth info -->
 <div id=bandwidth-view-tab-content class=content-box>
-  <div id=bandwidth-usage-table></div>
+  <table class="styled-table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Session</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr jsselect="rows">
+        <td jscontent="title"></td>
+        <td jscontent="sessionValue"></td>
+        <td jscontent="historicValue"></td>
+      </tr>
+    </tbody>
+  </table>
 </div>
