Add an icon and separator on GAIA screen
BUG=229762
NOTRY=true
R=ygorshenin@chromium.org

Review URL: https://chromiumcodereview.appspot.com/14542002

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197351 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/login/screen_gaia_signin.html
+++ b/resources/chromeos/login/screen_gaia_signin.html
@@ -15,7 +15,14 @@
       <div id="gaia-signin-reason" class="signin-text"></div>
       <div id="createAccount" class="signin-text"></div>
       <div id="guestSignin" class="signin-text"></div>
-      <div id="createLocallyManagedUser" class="signin-text"></div>
+      <div id="createManagedUserPane" class="signin-text">
+        <div id="createManagedUserSeparator"></div>
+        <div id="createManagedUserLogo">
+          <img src="chrome://theme/IDR_OOBE_ACTION_BOX_BUTTON_NORMAL">
+          <span i18n-content="createManagedUserFeatureName"></span>
+        </div>
+        <div id="createManagedUserLinkPlaceholder"></div>
+      </div>
     </div>
   </div>
   <div id="gaia-loading" class="step-loading">
