--- a/resources/chromeos/wallpaper_manager/main.html
+++ b/resources/chromeos/wallpaper_manager/main.html
@@ -39,6 +39,7 @@ found in the LICENSE file.
     <script src="../../../../../ui/webui/resources/js/cr/ui/context_menu_handler.js"></script>
 
     <script src="js/constants.js"></script>
+    <script src="js/util.js"></script>
     <script src="js/progress_manager.js"></script>
     <script src="js/wallpaper_directories.js"></script>
     <script src="js/wallpaper_images_grid.js"></script>
