Make the instant checkbox not a dialog-pref so that changes to it get committed to Chrome.
Fixes a regression introduced in http://crrev.com/195625 whereby changes to the instant checkbox were not actually committed to the prefs store.

BUG=236737
TEST=Open chrome://settings, check the instant checkbox, refresh the page, observe that the box is still checked.

Review URL: https://chromiumcodereview.appspot.com/14652003

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197492 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/options/browser_options.html
+++ b/resources/options/browser_options.html
@@ -146,7 +146,7 @@
           <span class="controlled-setting-with-label">
             <input id="instant-enabled-control" type="checkbox"
                 metric="Options_InstantEnabled"
-                i18n-values="pref:instant_enabled" dialog-pref>
+                i18n-values="pref:instant_enabled">
             <span>
               <!-- TODO(estade) There's a link in here which should not be
                    inside a <label>. -->
@@ -155,7 +155,7 @@
               </label>
               <span id="instant-enabled-indicator"
                   class="controlled-setting-indicator"
-                  i18n-values="pref:instant_enabled" dialog-pref>
+                  i18n-values="pref:instant_enabled">
               </span>
             </span>
           </span>
