--- a/resources/translate_internals/translate_internals.html
+++ b/resources/translate_internals/translate_internals.html
@@ -17,10 +17,11 @@ found in the LICENSE file.
     <script src="chrome://resources/js/cr/ui.js"></script>
     <script src="chrome://resources/js/cr/ui/tabs.js"></script>
     <script src="chrome://resources/js/cr/ui/focus_outline_manager.js"></script>
+    <script src="/strings.js"></script>
     <script src="./translate_internals.js"></script>
   </head>
 
-  <body>
+  <body i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize">
 
     <tabbox>
       <tabs>
@@ -28,14 +29,18 @@ found in the LICENSE file.
       </tabs>
       <tabpanels>
 
-        <tabpanel id="tabpanel-prefs">
-          <h2>Prefs</h2>
-          <p></p>
+        <tabpanel id="prefs">
+          <div>
+            <include src="prefs.html"/>
+          </div>
         </tabpanel>
 
       </tabpanels>
     </tabbox>
 
+    <script src="chrome://resources/js/i18n_template.js"></script>
+    <script src="chrome://resources/js/i18n_process.js"></script>
+    <script src="chrome://resources/js/jstemplate_compiled.js"></script>
   </body>
 
 </html>
