--- a/resources/chromeos/drive_internals.html
+++ b/resources/chromeos/drive_internals.html
@@ -88,7 +88,12 @@
     <h2 id='gcache-contents-section'>GCache Contents</h2>
     <table>
       <tbody id='gcache-contents'>
-        <tr><th>Path</th><th>Size</th><th>Last Modified</th></tr>
+        <tr>
+          <th>Path</th>
+          <th>Size</th>
+          <th>Last Modified</th>
+          <th>Permission</th>
+        </tr>
       </tbody>
     </table>
 
