Put Kiosk App parameters into device settings.
Remove the existing Kiosk App loading logic that presisted data in
local_state and replace it by code that reads/writes from/to device
settings. We're now using the existing device-local accounts users list,
which is also one step towards handling kiosk apps within the standard
login/user framework.

BUG=chromium:216359
TEST=Configure Kiosk App in device settings, observe it showing up on the login screen.

Review URL: https://codereview.chromium.org/14306004

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197892 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/options/chromeos/kiosk_apps.html
+++ b/resources/options/chromeos/kiosk_apps.html
@@ -16,7 +16,8 @@
       <div class="checkbox">
         <span class="controlled-setting-with-label">
           <input id="kiosk-disable-bailout-shortcut" type="checkbox"
-              pref="cros.kiosk.disable_bailout_shortcut">
+              pref="cros.accounts.deviceLocalAccountAutoLoginBailoutEnabled"
+              inverted_pref>
           <span>
             <label for="kiosk-disable-bailout-shortcut"
                 i18n-content="kioskDiableBailoutShortcutLabel">
