--- a/resources/flags.html
+++ b/resources/flags.html
@@ -30,10 +30,8 @@
 </if>
 
   <div id="flagsExperimentTemplate">
-
     <div id="container" class="vbox-container">
     <div id="top" class="wbox">
-
       <div class="section-header">
         <table cellpadding="0" cellspacing="0"><tr valign="center">
           <td>
@@ -44,27 +42,25 @@
           </td>
         </tr></table>
       </div>
-
     </div>
     </div>
 
     <div class="content">
       <div class="experiment-name no-experiments"
-           jsdisplay="flagsExperiments.length === 0">
+           jsdisplay="supportedExperiments.length == 0">
         <div i18n-content="flagsNoExperimentsAvailable"
           >NO_EXPERIMENTS_ARE_AVAILABLE</div>
       </div>
 
-      <div jsdisplay="flagsExperiments.length > 0">
+      <div jsdisplay="supportedExperiments.length > 0">
       <div class="experiment"
-           jsselect="flagsExperiments"
+           jsselect="supportedExperiments"
            jsvalues="id:internal_name">
         <table width="100%" cellpadding="2" cellspacing="0">
         <!-- TODO(mkwst): This doesn't work exactly as expected for multivalue
                           experiments.  See http://crbug.com/73730 -->
-        <tr jsvalues="class: supported ?
-                      (enabled ? 'experiment-enabled' : 'experiment-disabled') :
-                      'experiment-unsupported'">
+        <tr jsvalues="class: enabled ? 'experiment-enabled'
+                                     : 'experiment-disabled'">
         <td valign="top">
           <div class="experiment-text">
             <div>
@@ -77,7 +73,7 @@
                    jsvalues="href: '#' + internal_name"
                    jscontent="'#' + internal_name"></a>
               </div>
-              <div jsdisplay="supported && choices && choices.length > 0">
+              <div jsdisplay="choices && choices.length > 0">
                 <select
                   class="experiment-select"
                   jsvalues=".internal_name:internal_name;.disabled:!enabled">
@@ -90,22 +86,18 @@
             </div>
           </div>
           <div class="experiment-actions">
-            <div jsdisplay="!supported" i18n-content="flagsNotSupported"></div>
-            <!-- If enabled isn't set (i.e. in multi_type options),
-                 then both jsdisplay tests fail, and we get no
-                 rendering from this section. -->
             <span>
               <a
                 class="experiment-disable-link"
                 jsvalues=".internal_name:internal_name"
-                jsdisplay="supported && enabled"
+                jsdisplay="enabled"
                 href="#"
                 i18n-content="disable"
                 >DISABLE</a>
               <a
                 class="experiment-enable-link"
                 jsvalues=".internal_name:internal_name"
-                jsdisplay="supported && !enabled"
+                jsdisplay="!enabled"
                 href="#"
                 i18n-content="enable"
                 >ENABLE</a>
@@ -116,13 +108,64 @@
         </table>
       </div>
       </div>
+    </div>
 
-      <div class="needs-restart" jsdisplay="needsRestart">
-        <div i18n-content="flagsRestartNotice">NEEDS_RESTART</div>
-        <button class="experiment-restart-button"
-                type="button"
-                i18n-content="flagsRestartButton">RESTART</button>
+    <div id="container" class="vbox-container">
+    <div id="top" class="wbox">
+      <div class="section-header">
+        <table cellpadding="0" cellspacing="0"><tr valign="center">
+          <td>
+            <span class="section-header-title"
+                  i18n-content="flagsUnsupportedTableTitle"
+              >TITLE
+            </span>
+          </td>
+        </tr></table>
       </div>
+    </div>
+    </div>
+
+    <div class="content">
+      <div class="experiment-name no-experiments"
+           jsdisplay="unsupportedExperiments.length == 0">
+        <div i18n-content="flagsNoUnsupportedExperiments"
+          >NO_UNSUPPORTED_EXPERIMENTS</div>
+      </div>
+
+      <div jsdisplay="unsupportedExperiments.length > 0">
+      <div class="experiment"
+           jsselect="unsupportedExperiments"
+           jsvalues="id:internal_name">
+        <table width="100%" cellpadding="2" cellspacing="0">
+        <tr class="experiment-unsupported">
+        <td valign="top">
+          <div class="experiment-text">
+            <div>
+              <span class="experiment-name"
+                    jscontent="name">NAME</span>
+              <span jscontent="supported_platforms.join(', ')"></span>
+              <div>
+                <span jsvalues=".innerHTML:description"></span>
+                <a class="permalink"
+                   jsvalues="href: '#' + internal_name"
+                   jscontent="'#' + internal_name"></a>
+              </div>
+            </div>
+          </div>
+          <div class="experiment-actions">
+            <div i18n-content="flagsNotSupported"></div>
+          </div>
+        </td>
+        </tr>
+        </table>
+      </div>
+      </div>
+    </div>
+
+    <div class="needs-restart" jsdisplay="needsRestart">
+      <div i18n-content="flagsRestartNotice">NEEDS_RESTART</div>
+      <button class="experiment-restart-button" type="button"
+              i18n-content="flagsRestartButton">RESTART</button>
     </div>
   </div>
 </div>
