Redesign display options for ChromeOS.
Several new features have been added recently, and this new UI
allows users to customize them through web UI.

Updates display options page.

BUG=190897
R=oshima@chromium.org, xiyuan@chromium.org, jhawkins@chromium.org

Review URL: https://chromiumcodereview.appspot.com/14710011

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201256 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/options/browser_options.html
+++ b/resources/options/browser_options.html
@@ -117,9 +117,7 @@
         <button id="keyboard-settings-button"
             i18n-content="keyboardSettingsButtonTitle">
         </button>
-        <!-- By default, the display settings are hidden.  They are only visible
-             if more than one display is found. -->
-        <span id="display-options-section" hidden>
+        <span id="display-options-section">
           <button id="display-options" i18n-content="displayOptions">
           </button>
         </span>
