--- a/resources/options/chromeos/display_options.html
+++ b/resources/options/chromeos/display_options.html
@@ -8,26 +8,54 @@
       <div id="selected-display-data-container">
         <div id="selected-display-name"></div>
         <div>
-          <span i18n-content="resolution"></span>
-          <span id="selected-display-resolution"></span>
-        </div>
-        <div>
-          <span id="start-calibrating-overscan-control">
-            <a id="selected-display-start-calibrating-overscan"
-                i18n-content="startCalibratingOverscan"></a>
+          <div class="selected-display-option-title"
+              i18n-content="selectedDisplayTitleOptions">
+          </div>
+          <span class="display-options-button-container">
+            <button id="display-options-toggle-mirroring"
+                class="display-options-button" i18n-content="startMirroring">
+            </button>
+          </span>
+          <span class="display-options-button-container">
+            <button id="display-options-set-primary"
+                class="display-options-button" i18n-content="setPrimary">
+            </button>
           </span>
         </div>
-      </div>
-      <div id="display-options-buttons-container">
-        <div class="display-options-single-button-container">
-          <button id="display-options-toggle-mirroring"
-              class="display-options-button" i18n-content="startMirroring">
-          </button>
+        <div>
+          <div class="selected-display-option-title"
+              i18n-content="selectedDisplayTitleResolution">
+          </div>
+          <span class="display-options-button-container">
+            <select id="display-options-resolution-selection"
+                class="display-options-button">
+            </select>
+          </span>
         </div>
-        <div class="display-options-single-button-container">
-          <button id="display-options-set-primary"
-              class="display-options-button" i18n-content="setPrimary">
-          </button>
+        <div>
+          <div class="selected-display-option-title"
+              i18n-content="selectedDisplayTitleOrientation">
+          </div>
+          <span class="display-options-button-container">
+            <select id="display-options-orientation-selection"
+                class="display-options-button">
+              <option value="0" i18n-content="orientation0"></option>
+              <option value="90" i18n-content="orientation90"></option>
+              <option value="180" i18n-content="orientation180"></option>
+              <option value="270" i18n-content="orientation270"></option>
+            </select>
+          </span>
+        </div>
+        <div>
+          <div class="selected-display-option-title"
+              i18n-content="selectedDisplayTitleOverscan">
+          </div>
+          <span class="display-options-button-container">
+            <button id="selected-display-start-calibrating-overscan"
+                class="display-options-button"
+                i18n-content="startCalibratingOverscan">
+            </button>
+          </span>
         </div>
       </div>
     </div>
