--- a/resources/extensions/extensions.html
+++ b/resources/extensions/extensions.html
@@ -100,6 +100,12 @@
           </a>
           <a class="site-link" target="_parent" hidden></a>
         </p>
+        <div class="permanent-warnings">
+          <div class="extension-warnings" hidden>
+            <span i18n-content="extensionSettingsWarningsTitle"></span>
+            <ul></ul>
+          </div>
+        </div>
         <div class="developer-extras">
           <div>
             <span i18n-content="extensionSettingsExtensionId"></span>
@@ -115,10 +121,6 @@
           <div class="active-views" hidden>
             <span i18n-content="extensionSettingsInspectViews"></span>
             <a href="#"></a>
-          </div>
-          <div class="extension-warnings" hidden>
-            <span i18n-content="extensionSettingsWarningsTitle"></span>
-            <ul></ul>
           </div>
           <div class="install-warnings" hidden>
             <span i18n-content="extensionSettingsInstallWarnings"></span>
