Android: use grit target platform instead of define.
grit now supports passing "-t android" to set the target platform to
android, which sets is_android and is_posix, and does *not* set
is_linux (matching the OS_* macros). Use this instead of defining an
"android" macro.

This requires one actual condition change in app_locale_settings as
the Android port was previously depending on is_linux being true for
its definitions of IDS_WEB_FONT_*. The other grd changes are all
trivial substitutions.

BUG=239434
TBR=jamesr@chromium.org, joi@chromium.org, newt@chromium.org, sky@chromium.org

Review URL: https://codereview.chromium.org/14834011

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201310 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/about_memory_linux.html
+++ b/resources/about_memory_linux.html
@@ -6,7 +6,7 @@ about:memory template page
 <html id="t">
 <head>
   <title>About Memory</title>
-<if expr="pp_ifdef('android')">
+<if expr="is_android">
   <meta name="viewport" content="width=device-width">
 </if>
   <link rel="stylesheet" href="chrome://memory-redirect/about_memory.css">
