--- a/resources/flags.html
+++ b/resources/flags.html
@@ -2,7 +2,7 @@
 <html i18n-values="dir:textdirection;">
 <head>
 <meta charset="utf-8">
-<if expr="pp_ifdef('android')">
+<if expr="is_android">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 </if>
 <link rel="stylesheet" href="flags.css">
