--- a/resources/history/history.html
+++ b/resources/history/history.html
@@ -2,7 +2,7 @@
 <html i18n-values="dir:textdirection;">
 <head>
 <meta charset="utf-8">
-<if expr="pp_ifdef('android') or pp_ifdef('ios')">
+<if expr="is_android or pp_ifdef('ios')">
 <meta name="viewport" content="width=device-width, initial-scale=1.0,
                                maximum-scale=1.0, user-scalable=no">
 </if>
@@ -11,19 +11,19 @@
 <link rel="stylesheet" href="chrome://resources/css/chrome_shared.css">
 <link rel="stylesheet" href="chrome://resources/css/menu.css">
 <link rel="stylesheet" href="chrome://resources/css/menu_button.css">
-<if expr="not pp_ifdef('android') and not pp_ifdef('ios')">
+<if expr="not is_android and not pp_ifdef('ios')">
 <link rel="stylesheet" href="alert_overlay.css">
 <link rel="stylesheet" href="chrome://resources/css/overlay.css">
 </if>
 <link rel="stylesheet" href="chrome://resources/css/spinner.css">
-<if expr="not pp_ifdef('android') and not pp_ifdef('ios')">
+<if expr="not is_android and not pp_ifdef('ios')">
 <link rel="stylesheet" href="../uber/uber_shared.css">
 </if>
 <link rel="stylesheet" href="history.css">
-<if expr="pp_ifdef('android') or pp_ifdef('ios')">
+<if expr="is_android or pp_ifdef('ios')">
 <link rel="stylesheet" href="history_mobile.css">
 </if>
-<if expr="not pp_ifdef('android') and not pp_ifdef('ios')">
+<if expr="not is_android and not pp_ifdef('ios')">
 <link rel="stylesheet" href="other_devices.css">
 </if>
 
@@ -33,7 +33,7 @@
 <script src="chrome://resources/js/cr/ui/command.js"></script>
 <script src="chrome://resources/js/cr/ui/menu_item.js"></script>
 <script src="chrome://resources/js/cr/ui/menu.js"></script>
-<if expr="not pp_ifdef('android') and not pp_ifdef('ios')">
+<if expr="not is_android and not pp_ifdef('ios')">
 <script src="chrome://resources/js/cr/ui/alert_overlay.js"></script>
 <script src="chrome://resources/js/cr/ui/overlay.js"></script>
 </if>
@@ -47,17 +47,17 @@
 <script src="chrome://resources/js/util.js"></script>
 
 <script src="chrome://history-frame/history.js"></script>
-<if expr="not pp_ifdef('android')">
+<if expr="not is_android">
 <script src="chrome://history-frame/other_devices.js"></script>
 </if>
 
 </head>
 
-<if expr="not pp_ifdef('android')">
+<if expr="not is_android">
 <body class="uber-frame"
     i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize">
 </if>
-<if expr="pp_ifdef('android') or pp_ifdef('ios')">
+<if expr="is_android or pp_ifdef('ios')">
 <body i18n-values=".style.fontFamily:fontfamily">
 </if>
 
@@ -98,7 +98,7 @@
       </if>
     </div>
   </div>
-<if expr="not pp_ifdef('android')">
+<if expr="not is_android">
   <div id="other-devices" class="other-devices"></div>
 </if>
   <div id="top-container">
@@ -142,7 +142,7 @@
 <script src="chrome://history-frame/strings.js"></script>
 <script src="chrome://resources/js/i18n_template2.js"></script>
 
-<if expr="not pp_ifdef('android') and not pp_ifdef('ios')">
+<if expr="not is_android and not pp_ifdef('ios')">
 <div id="overlay" class="overlay" hidden>
     <include src="alert_overlay.html">
 </div>
