--- a/resources/net_export/net_export.html
+++ b/resources/net_export/net_export.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<if expr="pp_ifdef('android')">
+<if expr="is_android">
 <meta name="viewport" content="width=device-width">
 </if>
 <script src="chrome://resources/js/util.js"></script>
