Added the 'Translation Logs' tab to chrome://translate-internals/
BUG=175967

Review URL: https://chromiumcodereview.appspot.com/14494004

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201314 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/translate_internals/translate_internals.html
+++ b/resources/translate_internals/translate_internals.html
@@ -26,12 +26,19 @@ found in the LICENSE file.
     <tabbox>
       <tabs>
         <tab>Prefs</tab>
+        <tab>Detection Logs</tab>
       </tabs>
       <tabpanels>
 
         <tabpanel id="prefs">
           <div>
             <include src="prefs.html"/>
+          </div>
+        </tabpanel>
+
+        <tabpanel id="detection-logs">
+          <div>
+            <include src="detection_logs.html"/>
           </div>
         </tabpanel>
 
