[Android] Add app version code to chrome://version.
Version code information is useful for identifying different
arch versions of Chrome on Android.

BUG=233234

Review URL: https://chromiumcodereview.appspot.com/14864023

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201446 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/about_version.html
+++ b/resources/about_version.html
@@ -39,7 +39,8 @@ about:version template page
           <td class="version" id="version">
 <if expr="is_android">
             <span i18n-content="application_name"></span>
-            <span i18n-content="application_version"></span>
+            <span i18n-content="application_version_name"></span>
+            <span i18n-content="application_version_code"></span>
 </if>
 <if expr="not is_android">
             <span i18n-content="version"></span>
